加入压测列表

--- a/frontend/dashboard.html
+++ b/frontend/dashboard.html
@@ -41,6 +41,23 @@
     </form>
 </div>
 
+<h2>我的压测任务列表</h2>
+<table id="myTasks" border="1" cellpadding="6" cellspacing="0">
+    <thead>
+    <tr>
+        <th>任务ID</th>
+        <th>并发用户数</th>
+        <th>Ramp-Up (秒)</th>
+        <th>目标网址</th>
+        <th>开始时间</th>
+        <th>结束时间</th>
+        <th>状态</th>
+        <th>报告</th>
+    </tr>
+    </thead>
+    <tbody id="myTasksBody"></tbody>
+</table>
+
 <div class="form-container">
     <h2>下载测试报告</h2>
     <label>任务ID:</label><br>
